--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
         <title>Device Properties Example</title>
         
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-        <script type=”text/javascript” charset=”utf-8”> document.addEventListener(“deviceready”, onDeviceReady, false);
-var watchID = null;
-function onDeviceReady() {
-// Update every 3 seconds
-var options = { frequency: 3000 };
-watchID = navigator.geolocation.watchPosition(onSuccess, onError, options);
-}
-// onSuccess Geolocation
-//
-function onSuccess(position) {
-var element = document.getElementById(‘geolocation’);
-element.innerHTML =’Latitude: ‘ + position.coords.latitude + ‘<br />’ +
-‘Longitude: ‘ + position.coords.longitude + ‘<br />’ + ‘<hr />’ + element.innerHTML;
-}
-// onError Callback receives a PositionError object
-//
-function onError(error) {
-alert(‘code: ‘ + error.code + ‘\n’ + ‘message: ‘ + error.message + ‘\n’);
-}
-</script> </head>
-<body>
-<p id=”geolocation”>Watching geolocation...</p>
-</body> </html>
+        <script type="text/javascript" charset="utf-8">
+
+    // Wait for Cordova to load
+    //
+    document.addEventListener("deviceready", onDeviceReady, false);
+
+    var watchID = null;
+
+    // Cordova is ready
+    //
+    function onDeviceReady() {
+        // Throw an error if no update is received every 30 seconds
+        var options = { timeout: 500 };
+        watchID = navigator.geolocation.watchPosition(onSuccess, onError, options);
+    }
+
+    // onSuccess Geolocation
+    //
+    function onSuccess(position) {
+        var element = document.getElementById('geolocation');
+        element.innerHTML = 'Latitude: '  + position.coords.latitude      + '<br />' +
+                            'Longitude: ' + position.coords.longitude     + '<br />' +
+                            'Speed: '     + position.coords.speed         + '<br />'
+                            '<hr />'      + element.innerHTML;
+    }
+
+    // onError Callback receives a PositionError object
+    //
+    function onError(error) {
+        alert('code: '    + error.code    + '\n' +
+              'message: ' + error.message + '\n');
+    }
+
+    </script>
+  </head>
+  <body>
+    <p id="geolocation">Atualizando</p>
+  </body>
+</html>
